Updated MainCourseCard Description to show correctly the description if its too long

--- a/StudyFlow/StudyFlow.Frontend/src/components/cards/mainCourseCard/mainCourseCard.css
+++ b/StudyFlow/StudyFlow.Frontend/src/components/cards/mainCourseCard/mainCourseCard.css
@@ -68,7 +68,14 @@
 .main_course-description {
     font-size: 0.95rem;
     line-height: 1.3;
-    color: #ffffff !important;
+    max-width: calc(37ch * 1.1);
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: normal;
+    word-break: break-word;
 }
 
 /* Tema oscuro */
